[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
Flask = "^2.0.3"
fuzzywuzzy = "^0.18.0"
googletrans = "^3.0.0"
psutil = "^5.9.0"
pyfiglet = "^0.8.post1"
simpleeval = "^0.9.12"
aiohttp = "^3.8.1"
hikari = {version = "^2.0.0-alpha.106", python = "~3.8"}
hikari-lightbulb = {version = "^2.2.0", python = "~3.8"}
hikari-miru = {version = "^1.1.1", python = "~3.8"}
Pillow = "^9.0.1"
python-Levenshtein = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"